@@ -48,7 +48,9 @@ test-suite spec
   main-is:             Spec.hs
   build-depends:       base >=4.6 && <4.7
                      , env-parser-talk
+                     , QuickCheck
                      , hspec
+                     , unix
                      , hspec-expectations
   hs-source-dirs:      tests
   default-language:    Haskell2010
